fix: dark mode

--- a/src/packages/infiniteloading/demo.scss
+++ b/src/packages/infiniteloading/demo.scss
@@ -11,7 +11,7 @@
 .infiniteLi {
   margin-top: 10px;
   font-size: 14px;
-  color: rgba(100, 100, 100, 1);
+  color: $color-text;
   text-align: center;
 }
 .loading {
