--- a/src/packages/menu/menu.scss
+++ b/src/packages/menu/menu.scss
@@ -15,7 +15,7 @@
   position: relative;
   display: flex;
   line-height: $menu-bar-line-height;
-  background-color: $color-background;
+  background-color: $color-background-overlay;
   box-shadow: $menu-bar-box-shadow;
 
   &.opened {
