--- a/src/packages/tabbar/tabbar.scss
+++ b/src/packages/tabbar/tabbar.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  background: $color-background;
+  background: $color-background-overlay;
 
   &__wrap {
     width: 100%;
