--- a/src/packages/tabpane/tabpane.scss
+++ b/src/packages/tabpane/tabpane.scss
@@ -2,7 +2,7 @@
   width: 100%;
   flex-shrink: 0;
   display: block;
-  background-color: $color-background;
+  background-color: $color-background-overlay;
   color: $color-title;
   padding: 24px 20px;
   box-sizing: border-box;
